@@ -1,6 +1,7 @@
 * 1.8.0
 	* New features:
-		- Refactor codes, separate into: libutil, libnet, libssdb(TODO)
+		- Include sync clients' stats in info(2014-11-02)
+		- Refactor codes, separate into: libutil, libnet, libssdb(2014-11-02)
 		- ssdb-cli add dbsize command(2014-10-26)
 * 1.7.0.1
 	* New features:
